<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/loginText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatephoneandemail"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/loginText2"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phoneOptional"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray"
            android:padding="15dp"
            android:layout_margin="2dp"
            android:textColorHint="#bbbbbb"
            android:inputType="phone"
            android:singleLine="true"
            android:background="@drawable/edittext_top_bg"/>

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray"
            android:hint="@string/emailOptional"
            android:padding="15dp"
            android:layout_margin="2dp"
            android:textColorHint="#bbbbbb"
            android:background="@drawable/edittext_top_bg"
            />

        <Button
            android:id="@+id/goBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_below="@+id/emailId"
            android:background="@drawable/button_clickedstate"
            android:textColor="@color/blackText"
            android:padding="15dp"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_below="@+id/goBtn"
            android:background="@drawable/button_clickedstate"
            android:textColor="@color/lightLightGray"
            android:padding="15dp"
            android:layout_margin="2dp"/>

    </RelativeLayout>

</RelativeLayout>
