<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userImageView"
        android:src="@drawable/ic_user_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName1"
        android:layout_toRightOf="@+id/userImageView"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeView1"
        android:text="@string/app_name"
        android:layout_toRightOf="@+id/userImageView"
        android:layout_below="@+id/userName1"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionView1"
        android:text="@string/app_name"
        android:layout_toRightOf="@+id/userImageView"
        android:layout_below="@+id/timeView1"/>

    <Button
        android:id="@+id/likeBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likeBtn"
        android:layout_below="@+id/descriptionView1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentBtn"
        android:layout_below="@+id/descriptionView1"
        android:layout_toRightOf="@+id/likeBtn1"/>

</RelativeLayout>